Fixed scroll bar present vs not present layout shifts

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -113,7 +113,6 @@
         overflow-x: visible;
         padding-right: 1rem;
         position: sticky;
-        scrollbar-gutter: auto;
         top: 6.5rem;
 
         &>ul {
