--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -54,8 +54,8 @@
   /* --- Document --- */
 
   html {
+      overflow-y: scroll;
       scroll-behavior: smooth;
-      scrollbar-gutter: stable;
   }
 
   body {
